// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea component should be disabled with placeholder and value 1`] = `
<DocumentFragment>
  <textarea
    class="textarea"
    disabled=""
    name=""
    placeholder="hello tests"
    rows="4"
  >
    TEST
  </textarea>
</DocumentFragment>
`;

exports[`Textarea component should be large with 10 rows and readOnly 1`] = `
<DocumentFragment>
  <textarea
    class="textarea is-large"
    name=""
    placeholder=""
    readonly=""
    rows="10"
  />
</DocumentFragment>
`;

exports[`Textarea component should concat classname in props with Bulma classname 1`] = `
<DocumentFragment>
  <textarea
    class="textarea other-class this-is-a-test"
    name=""
    placeholder=""
    rows="4"
  />
</DocumentFragment>
`;

exports[`Textarea component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "color": null,
    "disabled": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "name": "",
    "overlay": false,
    "paddingless": false,
    "placeholder": "",
    "pull": null,
    "radiusless": false,
    "readOnly": false,
    "responsive": undefined,
    "rows": 4,
    "shadowless": false,
    "size": null,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
    "value": "",
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "color": [Function],
    "disabled": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "name": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "placeholder": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "readOnly": [Function],
    "responsive": [Function],
    "rows": [Function],
    "shadowless": [Function],
    "size": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
    "value": [Function],
  },
  "render": [Function],
}
`;

exports[`Textarea component should have textarea classname 1`] = `
<DocumentFragment>
  <textarea
    class="textarea"
    name=""
    placeholder=""
    rows="4"
  />
</DocumentFragment>
`;

exports[`Textarea component should use inline styles 1`] = `
<DocumentFragment>
  <textarea
    class="textarea"
    name=""
    placeholder=""
    rows="4"
    style="height: 250px;"
  />
</DocumentFragment>
`;
